--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,4 +21,5 @@
 @import './components/modal/checkbox';
 @import './components/modal/form__button';
 @import './components/meny';
+@import './components/ice' ;
 
